base/backend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leap25-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  tls:
    - hosts:
        - api.dlsucso-leap.com
      secretName: leap25-backend-tls
  rules:
    - host: api.dlsucso-leap.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: leap25-backend
                port:
                  number: 80
